# MCP-Job-Search-Server

./: .env  .env.example  .gitignore  docker-compose.yaml  pyproject.toml  server.py  test.py
qdrant_data/: raft_state.json
qdrant_data/collections/documents/0/: newest_clocks.json  replica_state.json
qdrant_data/collections/documents/0/segments/366b4fdf-c032-4d84-9f08-5323dd584bf6/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_data/collections/documents/0/segments/366b4fdf-c032-4d84-9f08-5323dd584bf6/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_data/collections/documents/0/segments/6072dce3-6958-4101-836c-53d2e05bbac7/: mutable_id_tracker.mappings
qdrant_data/collections/documents/0/segments/6072dce3-6958-4101-836c-53d2e05bbac7/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_data/collections/documents/0/segments/68ed5449-004f-445a-8c2b-5a8be2dac103/: mutable_id_tracker.mappings
qdrant_data/collections/documents/0/segments/68ed5449-004f-445a-8c2b-5a8be2dac103/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_data/collections/documents/0/segments/b24a9dbd-63e7-45d8-8b18-8c79c60b58a4/payload_index/: IDENTITY  LOG  MANIFEST-000005
store/: qdrant.py
