[project]
name = "mcp-job-search-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.26",
    "langchain-huggingface>=0.3.0",
    "langchain-qdrant>=0.2.0",
    "mcp[cli]>=1.9.4",
    "sentence-transformers>=4.1.0",
]
